--- a/pages/reading/2018-nov.md
+++ b/pages/reading/2018-nov.md
@@ -13,12 +13,14 @@ tags:
 image:
   path: "https://images.unsplash.com/photo-1518336751805-17d4ea1ba5a0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3269&q=80"
   alt: "Books on bookshelves"
-  class: "image-greyscale-75 image-darken-33"
+  class: "image-obj-cover image-greyscale-75 image-darken-33"
   # pictureClass: "content-canvas-item-right content-canvas-item-right--span-3"
   pictureClass:
-    page: "content-canvas-item-full picture--hero"
+    # page: "content-canvas-item-full picture--hero"
     list: "index-list__item__picture"
-  caption: 'books on bookshelf” by <a class="af ne" href="https://unsplash.com/@chuttersnap?utm_source=medium&amp;utm_medium=referral" rel="noopener ugc nofollow" target="_blank">chuttersnap</a> on <a class="af ne" href="https://unsplash.com?utm_source=medium&amp;utm_medium=referral" rel="noopener ugc nofollow" target="_blank">Unsplash</a>'
+  figureClass:
+    page: "content-canvas-item-full figure--hero"
+  caption: 'books on bookshelf” by <a class="af ne" href="https://unsplash.com/@chuttersnap?utm_source=medium&amp;utm_medium=referral" rel="noopener nofollow" target="_blank">chuttersnap</a> on <a class="af ne" href="https://unsplash.com?utm_source=medium&amp;utm_medium=referral" rel="noopener nofollow" target="_blank">Unsplash</a>'
 ---
 
 Nullam lobortis nibh sed odio venenatis facilisis. Vivamus iaculis, tortor ac sodales placerat, nisl sem finibus sem, vitae ultrices orci quam nec ex. Aliquam volutpat ex fringilla augue luctus consequat. Nulla faucibus accumsan velit, eget fringilla ligula maximus ut. Mauris quis quam nec mi porta efficitur. Donec ac laoreet metus. Morbi efficitur rutrum quam id faucibus. Quisque interdum mattis erat non laoreet. Morbi eget justo non libero laoreet molestie. Integer euismod metus id sapien luctus efficitur. Aliquam vel interdum tellus.
