--- a/pages/reading/2018-nov.md
+++ b/pages/reading/2018-nov.md
@@ -1,9 +1,10 @@
 ---
-title: "Reading Recap, November 2018 (pt. 1)"
+title: "Reading Recap, November 2018"
 description: "Since finishing my PhD I’ve read lots of fiction again. Here’s a belated recap on books I read in the second half of 2017."
 layout: page.njk
-date: 2023-05-10
+date: 2018-11-02
 promoted: true
+order: 2
 canonical: "https://medium.com/post-phd-world/reading-recap-november-2018-pt-1-2ebacab50c55"
 page:
   class: "page--with-hero"
@@ -23,14 +24,148 @@ image:
   caption: 'books on bookshelf” by <a class="af ne" href="https://unsplash.com/@chuttersnap?utm_source=medium&amp;utm_medium=referral" rel="noopener nofollow" target="_blank">chuttersnap</a> on <a class="af ne" href="https://unsplash.com?utm_source=medium&amp;utm_medium=referral" rel="noopener nofollow" target="_blank">Unsplash</a>'
 ---
 
-Nullam lobortis nibh sed odio venenatis facilisis. Vivamus iaculis, tortor ac sodales placerat, nisl sem finibus sem, vitae ultrices orci quam nec ex. Aliquam volutpat ex fringilla augue luctus consequat. Nulla faucibus accumsan velit, eget fringilla ligula maximus ut. Mauris quis quam nec mi porta efficitur. Donec ac laoreet metus. Morbi efficitur rutrum quam id faucibus. Quisque interdum mattis erat non laoreet. Morbi eget justo non libero laoreet molestie. Integer euismod metus id sapien luctus efficitur. Aliquam vel interdum tellus.
+I wrote a blog post last year about getting back to reading fiction again after finishing my PhD, and reading novels in particular:
 
-https://medium.com/post-phd-world/5-ways-to-catch-up-on-reading-novels-5a468efbc3e4
+{% link_internal "/reading/reading-novels-5-ways/" %}
 
-{% link_internal "/writing/test-03/" %}
+I use [Goodreads](http://goodreads.com/){rel=noopener target=_blank} to keep a track of things I’ve read, and especially to note the things that I would like to read, often when a book is mentioned by a friend, or I hear about something that’s being published soon — all the 2018 Booker Prize winners are in my ‘Want to Read’ list, for example. I’ve found it a really useful tool, brilliant when browsing in a bookshop to help me find something interesting that I’ll probably like — I’ve picked up several books that way.
 
-Fusce a leo vitae elit imperdiet blandit. Quisque sodales ipsum risus, ut suscipit tellus tempor sit amet. Suspendisse nisi purus, tincidunt sed felis tristique, maximus mollis magna. Vestibulum lorem arcu, pharetra nec turpis vel, posuere pretium est. Vestibulum elementum ac tortor ut lobortis. Donec elit justo, egestas at pharetra vel, pellentesque in felis. Morbi consequat ipsum sit amet dui feugiat, id congue orci vulputate. Cras a sollicitudin dui. Nunc eu dolor consequat, rutrum metus ut, viverra enim. Integer elementum turpis ac quam laoreet placerat. Quisque accumsan nisi felis, vitae volutpat sem sagittis sit amet.
+Goodreads has a ‘reading challenge’ feature that I used to keep tabs on my progress across the year, a number of books to aim to read in a calendar year.
 
-Donec efficitur sem sit amet sem tempus, eget mattis metus pellentesque. Phasellus aliquet ipsum eget posuere euismod. Sed bibendum feugiat nisi ut varius. Nam ornare felis sed dapibus fringilla. Aliquam id hendrerit felis, a dapibus massa. Etiam mi massa, vestibulum quis maximus vitae, fermentum ac leo. Mauris massa odio, mollis et turpis hendrerit, porta blandit ex. Maecenas gravida tellus lacus, id fermentum quam porta ac. Pellentesque eget dictum diam, id faucibus ligula. Ut luctus nunc nec mi malesuada convallis. Proin at molestie nibh. Phasellus rhoncus efficitur ex ut aliquet. Vivamus nulla augue, efficitur ac augue id, hendrerit fringilla ligula. Etiam laoreet ullamcorper laoreet.
+I set myself a modest reading target in 2017 of reading 20 novels in the year, knowing that:
+a) I’m not a very fast reader,
+b) work and family life is full, and so,
+c) my reading each day would probably be limited the 10 minutes or so in bed before my eyelids drooped and the light had to be switched off.
 
-In ac nibh ut sapien vulputate dapibus venenatis rhoncus dui. Sed eu aliquet felis. Sed enim risus, ultricies at ligula quis, mattis venenatis ipsum. Nulla porta accumsan magna, sodales elementum eros luctus et. In commodo volutpat finibus. Vivamus vel rutrum elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nunc at dignissim turpis. Morbi vestibulum quis justo non vehicula. Nulla suscipit tristique maximus. Ut ac tristique eros. Proin facilisis ornare felis ut consectetur.
+I managed to hit my target with around 2 weeks left of the year, and was very pleased with myself.
+
+This year, 2018, I thought I’d be a little bit more ambitious with my reading challenge and set it for 24 books in the year. That’s still slightly less than a book a fortnight, of course, and so still felt manageable within the constraints of life. Much to my surprise, I managed to hit my target on the 4th of September and I’m already onto book 30 (*[American Pastoral](https://www.goodreads.com/book/show/11650.American_Pastoral){rel=noopener target=_blank}*, by Philip Roth).
+
+https://twitter.com/joesb/status/1037062460082212864
+
+So, here below is a list, with some notes, on the books I’ve read since my post last year.
+
+I’ve given each a star-rated vote. I’m aware that my ratings are weighted towards the top end, but that’s mainly, I think, because I don’t want to waste my time on books I feel I’m likely to not enjoy reading. So far this year there hasn’t been a book that I’ve been disappointed that I’ve read. One or two haven’t been as good as I’d hoped, but I’ve still enjoyed reading them.
+
+…{.separator role=separator}
+
+### The rest of 2017
+
+#### [Sapiens: A Brief History of Humankind](https://www.goodreads.com/book/show/25004163-sapiens){rel=noopener target=_blank}
+
+<figure class="content-canvas-item-right content-canvas-item-right--span-3 picture--block">
+  {% image "https://m.media-amazon.com/images/I/41voLKA8u4L._SL500_.jpg", "Sapiens audiobook cover", "picture--outline", %}
+</figure>
+
+*By Yuval Noah Harari*
+(audiobook)
+★★★★☆
+
+I’ve listened to very few audiobooks in my life, and this was my first real experience of it. I had some tokens for Audible.com available and, unsure of what to get, this book seemed like a good option — I’d heard lots of positive buzz about it. I got it in time to take on our family holiday in the summer, and listened to much of it whilst pottering in the kitchen cooking family meals and the like.
+
+A stimulating and provocative high-level and long-timescale view of the history of our species, Homo Sapiens. By taking such a large-scale perspective, Harari is able to identify and assess the most significant developments in human history. His analysis of the significance, importance and impact of these moments are profound and had me in heated debate on them internally and with others. The high level view is not for all, the loss of detail and nuance being a significant problem in places. Nonetheless, I found this is a challenging and immensely rewarding read.
+
+#### [Winter in Madrid](https://www.goodreads.com/book/show/891671.Winter_in_Madrid){rel=noopener target=_blank}
+
+<figure class="content-canvas-item-right content-canvas-item-right--span-3 picture--block">
+  {% image "https://m.media-amazon.com/images/I/416Q5-g6KrL._SX330_BO1,204,203,200_.jpg", "Winter in Madird book cover", "picture--outline", %}
+</figure>
+
+*By C.J. Sansom*
+★★★★☆
+
+Sansom is most famous for his Shardlake series, I believe, though I’ve not read any of them. A second-hand copy of *Winter in Madrid* sat on our bookshelves for years without being picked up, but I was so glad that I read it. It’s an historical thriller set in Spain immediately after the Civil War, a reluctant British spy, a British man who had fought against Franco and is now a prisoner of war, his former lover who is trying to find him and her husband, a shady businessman. The book accelerated as the predicaments of each of the characters became more precarious and more perilous until the high tension conclusion. I really enjoyed reading it.
+
+#### [Homage to Catalonia](https://www.goodreads.com/book/show/22382742-homage-to-catalonia){rel=noopener target=_blank}
+
+<figure class="content-canvas-item-right content-canvas-item-right--span-4 picture--block">
+  {% image "https://m.media-amazon.com/images/I/81BeFs0yZnL.jpg", "Homage to Catalonia book cover", "picture--outline", %}
+</figure>
+
+*By George Orwell*
+★★★★☆
+
+I decided to read *Homage to Catalonia* next for two reasons. Firstly, I was inspired by *Winter in Madrid* and curious to find out more about the British who went to fight against fascism in the Spanish Civil War.
+
+Secondly, though, I had watched a BBC Storyville documentary film called ‘[Accidental Anarchist: Life Without Government](https://www.bbc.co.uk/programmes/b08z007p){rel=noopener target=_blank},’ by Carne Ross, a career diplomat who resigned over the Iraq war and went on to found [Independent Diplomat](https://independentdiplomat.org/){rel=noopener target=_blank}, a non-profit advisory group in the world of diplomacy.
+
+https://www.youtube.com/watch?v=UI9KnEXLSZU
+
+In the film, Ross argued assertively against widely held assumptions that anarchism is a practical impossibility, citing Spanish civil war-era Catalonia was a shining example of working anarchism, amongst several other examples (His TED talk on the same subject is at: https://www.youtube.com/watch?v=2Hc2_jY4KhY).
+
+This made me curious to find out more, and Orwell’s famous book seemed an obvious source.
+
+In fact, Orwell writes frustratingly little about Catalan life in the era, which I guess is what I had been looking forward to reading. The book, instead, is more about his experiences in the militia. But his writing is profoundly humane of the facets and factions in the fight against fascism, and especially of the hopes and betrayals in the name of expedience of the successful anarchist social experiment that Carne Ross had described.
+
+#### [The Essex Serpent](https://www.goodreads.com/book/show/32075861-the-essex-serpent){rel=noopener target=_blank}
+
+<figure class="content-canvas-item-right content-canvas-item-right--span-4 picture--block">
+  {% image "https://m.media-amazon.com/images/I/A1qcKSUCXYL.jpg", "The Essex Serpent book cover", "picture--outline", %}
+</figure>
+
+*By Sarah Perry*
+★★★★★
+
+A mesmerising story told in beautiful language to match the beauty of the book’s wonderful cover. Cora Seaborne, a modern, independent widow in Victorian London, befriends Will Ransome, a rural Essex parish vicar. Ransome’s parish is beset by tales of the Essex Serpent, casting a spell over his parishioners, and Cora and Will challenge and surprise each other as they slowly uncover the truth behind the myths and maybe fall for each other as well.
+
+I’m a sucker for a novel where the reading of it is a sensory experience itself, and the language of Perry’s book had me within the first few paragraphs.
+
+#### [The New Life](https://www.goodreads.com/book/show/28013084-the-new-life){rel=noopener target=_blank}
+
+<figure class="content-canvas-item-right content-canvas-item-right--span-4 picture--block">
+  {% image "https://m.media-amazon.com/images/I/91K6V3YrXHL.jpg", "The New Life book cover", "picture--outline", %}
+</figure>
+
+*By Orhan Pamuk*
+★★★★☆
+
+Orhan Pamuk is one of my favourite authors. This story is a variant on one of Pamuk’s persistent themes, a young man who falls in love with a woman who is out of his reach, for one reason or another. The opening line of The New Life is brilliant: ‘I read a book one day, and my whole life was changed.’ And so the student, Osman, who yearns for the life promised in this magical book, abandons his studies, his family and his home and sets off on a series of bus journeys to find the young woman, Janan, he has fallen in love with and the new life of his visions.
+
+I got a little lost in places in the middle, losing the book a star, but Pamuk’s postmodern writing and the layers and spirals of plots and events can tend to that happening. The language, as always, was absorbing, though, and simply following on through was a delight.
+
+#### [The Remains of the Day](https://www.goodreads.com/book/show/8492776-the-remains-of-the-day){rel=noopener target=_blank}
+
+<figure class="content-canvas-item-right content-canvas-item-right--span-4 picture--block">
+  {% image "https://m.media-amazon.com/images/I/61hvxj9yj5L.jpg", "The Remains of the Day book cover", "picture--outline", %}
+</figure>
+
+*By Kazuo Ishiguro*
+★★★★★
+
+I can’t believe I’ve never read this before. What have I been doing? A sublime story of restrained life in service in England between the two Great Wars and of overpowering duty to the master of an English Great House. Stevens, former butler to Lord Darlington, takes a rare holiday into the English countryside and into his own past and memories, and comes to understand he must try to make up for lost time and lost opportunities.
+
+Stevens’s dedicated life of self-restraint in preference for Lord Darlington and his guests forced him to repress both his consciousness of Darlington’s political and social manoeuvres and his perception of the feelings of those around him, especially his father and the House’s housekeeper, Miss Kenton. Now he must try to understand and to make amends.
+
+#### [The Dalkey Archive](https://www.goodreads.com/book/show/984096.The_Dalkey_Archive){rel=noopener target=_blank}
+
+<figure class="content-canvas-item-right content-canvas-item-right--span-4 picture--block">
+  {% image "https://i.harperapps.com/covers/9780007247196/y648.jpg", "The Dalkey Archive book cover", "picture--outline", %}
+</figure>
+
+*By Flann O’Brien*
+★★★★☆
+
+Mad scientist and theologian, De Selby, plots to destroy the world by removing all the oxygen from the air. Only a civil servant, Michael Shaughnessy, and James Joyce himself, alive and well and working in a bar, can foil De Sleby’s plans. *The Dalkey Archive* is a companion book to Flann O’Brien’s earlier novel, *The Third Policeman*, written apparently because O’Brien was unable to find a publisher for his earlier work. De Selby appeared in *The Third Policeman*, though only by reference (and largely in brilliantly surreal footnotes and quotations from imagined works by de Selby [with the variant spelling in each book]), and *The Dalkey Archive* also includes the fabulous quantum theory of bicycles. I really enjoyed this book enormously, full to the brim with fantastic goings on and wild humour, but *The Third Policeman* is in my all-time top 5 — its ending is superb, one of the best I’ve ever read. Better to read both, but if you’re only going to read one of the two, read that.
+
+#### [Any Human Heart](https://www.goodreads.com/book/show/7544887-any-human-heart){rel=noopener target=_blank}
+
+<figure class="content-canvas-item-right content-canvas-item-right--span-4 picture--block">
+  {% image "https://m.media-amazon.com/images/I/71ihyc3+L8L.jpg", "Any Human Heart book cover", "picture--outline", %}
+</figure>
+
+*by William Boyd*
+★★★★★
+
+For quite a while now, I’ve been encouraged by a colleague, friend and reading buddy, [Steve Parks](https://www.stephenparks.org/){rel=noopener target=_blank}, to read William Boyd, and this is my first William Boyd, on Steve’s recommendation of the best place to start.
+
+*Any Human Heart* is an utterly astonishing work, a superbly plotted plotless book that had me riveted and enraptured on every page. Logan Mountstuart is so well drawn as a character that I cared desperately about every moment of his sweet, painful life. The other major and minor characters seemed utterly plausible, and I ended up ‘just checking’ a number of the incidental characters on Wikipedia, so deftly woven are they with other actual historical characters. Brilliant!
+
+I am now hooked after this, my first William Boyd novel, and I’m really looking forward to reading more by this astonishing author.
+
+…{.separator role=separator}
+
+So, that’s how far I got in the rest of 2017. A forthcoming blog will have reviews of the books I’ve read in the first half of 2018.
+
+I’d also love to have any recommendations of must-read books or authors. You can see the kind of thing I tend towards from the above and in the [previous blog](/reading/reading-novels-5-ways/) or on my [Goodreads ‘Read’ books list](https://www.goodreads.com/review/list/38572396-joe-baker?per_page=50&shelf=read&utf8=%E2%9C%93){rel=noopener target=_blank}.
+
+Send me a suggestion on [mstdn.social/@joesb on Mastodon](https://mstdn.social/@joesb){rel=noopener target=_blank} or on [@joesb on Twitter](https://twitter.com/joesb){rel=noopener target=_blank}.
